fix- white space on right side at <700px

--- a/css/style.css
+++ b/css/style.css
@@ -496,3 +496,8 @@ h1.sg-title {
   display: none;
 }
 
+body,
+html {
+  width: 100%;
+  overflow-x: hidden;
+}
